1999-11-02  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* smtpserver/smtpserver.c:
	    Don't do ident query when in interactive mode.

1999-10-30  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* smtpserver/Makefile.in, smtpserver/smtpserver.c,
	  smtpserver/wantconn.c:
	    Reversed the effective kill of the tcp-wrapper after
	    the ./configure got a way not to link it in per default..

	* configure.in:
	    "--with-openssl" (or its more explicite cousins) must now
	       be used to have OpenSSL enabled at the system
	    "--with-tcp-wrappers" (or its more explicite cousins) must
	       now be used to have TCP-Wrapper enabled at the system

	* man/smtpserver.8, proto/smtpserver.conf.in, smtpserver/cfgread.c,
	  smtpserver/smtpserver.h, smtpserver/smtpserver.c,
	  smtpserver/smtpcmds.c:
	    A "tarpit" feature implementation per an idea from
	    Arjan van de Ven <arjan@NL.UU.NET>, plus
	    Mark Visser <mark@cal026031.student.utwente.nl>.
	    (Who reported of what postfix/vmail can do.)

1999-10-26  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* configure.in:
	    Smarter (?) default picking for  SENDMAILPATH and MAILBOX
	    directory path for those systems which have  <paths.h> file
	    with system specific directory paths...

	* libc/Makefile.in:
	    Fixed $(prefix) usages in 'make install' targets.

	* smtserver/Makefile.in,
	  smtpserver/smtpserver.c, smtpserver/wantconn.c:
	    Essentially killed tcp-wrapper from being used for ZMailer's
	    smtpserver.  SMTPSERVER's policy-database has superior
	    technology for the same thing.

1999-10-20  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* man/Makefile.in:
	    Make the destination directories if they don't exist..

	* router/libdb/bsdbtree.c, router/libdb/bsdhhash.c,
	  utils/makedb/makedb.c:
	    Turns out, 'put' function of  Sleepycat DB 2.x  has
	    changed the return values completely around, and what
	    before was negative for permanent/system error, is now
	    a positive value, and the other way around...